DOne  All work of  Api

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,8 @@
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background: rgba(100, 116, 139, 0.5);
 }
+@layer components {
+  input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    filter: invert(1) brightness(2);
+  }
+}
