Order page  work on this

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,3 +141,9 @@ input[type="number"] {
   animation: toastIn 0.28s ease-out;
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-calendar-picker-indicator,
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(1) brightness(1.2);
+  cursor: pointer;
+}
